--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,11 @@
 }
 
 
+.testimonial{
+    padding-top: 100px;
+}
+.testimonial .col-3{
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 0 20px 0px; 
+}
