--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,27 @@ p {
   color: #555;
 }
 
+.col-2 {
+  flex-basis: 50%;
+  min-width: 600px;
+}
+
+.col-2 img {
+  max-width: 200%;
+  padding: 50px 0;
+}
+
+.col-2 h1 {
+  font-size: 50px;
+  line-height: 60px;
+  margin: 25px 0;
+}
+
+
+.header .row {
+  margin-top: 70px;
+}
+
 
 
 
