--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,132 @@
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     font-family: 'Poppins', sans-serif;
-  }
-  
-  .navbar {
+}
+
+.navbar {
     display: flex;
     align-items: center;
     padding: 20px;
-  }
-  
-  nav {
+}
+
+nav {
     flex: 1;
     text-align: right;
-  }
-  
-  nav url {
+}
+
+nav url {
     display: inline-block;
     list-style-type: none;
-  }
-  
-  nav ul li {
+}
+
+nav ul li {
     display: inline-block;
     margin-right: 20px;
-  }
-  
-  a {
+}
+
+a {
     text-decoration: none;
     color: #555;
-  }
-  
-  p {
+}
+
+p {
     color: #555;
-  }
-  
-  .container {
+}
+
+.container {
     max-width: 1300px;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
-  }
-  
-  .col-1 {
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.col-2 {
     flex-basis: 50%;
     min-width: 600px;
-  }
-  
-  .col-1 img {
+}
+
+.col-2 img {
     max-width: 100%;
     padding: 50px 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-  
-  .col-1 h1 {
+}
+
+.col-boy {
+    flex-basis: 50%;
+    min-width: 300px;
+}
+
+.col-boy img {
+    max-width: 100%;
+    padding: 50px 0;
+}
+
+.col-2 h1 {
     font-size: 50px;
     line-height: 60px;
     margin: 25px 0;
-  }
-  
-  
-  .header .row {
+}
+
+.btn {
+    display: inline-block;
+    background: #ff523b;
+    color: #fff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    transition: background 0.5s;
+}
+
+.btn:hover {
+    background: none;
+    border: solid  #ff523b;
+}
+
+
+
+.header .row {
     margin-top: 70px;
-  }
-  
-  .title {
+}
+
+.categories {
+    margin: 70px 0;
+}
+
+.col-3 {
+    flex-basis: 30%;
+    min-width: 250px;
+   margin-bottom: 30px; 
+}
+
+.col-3 img {
+    width: 100%;
+}
+
+.small-container {
+    max-width: 1080px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.title {
     text-align: center;
     margin: 0 auto 80px;
     position: relative;
     color: #555;
-  }
-  
-  .title::after {
+}
+
+.title::after {
     content: '';
     background: #ff523b;
     width: 80px;
@@ -88,41 +136,29 @@
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-  }
-  
-  
-  .row {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
+}
 
-  
-  .btn {
-    display: inline-block;
-    background: #ff523b;
-    color: #fff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    transition: background 0.5s;
-  }
-  
-  .btn:hover {
-    background: #563434;
-  
-  }
-  
-  
-  h4 {
+h4 {
     color: #555;
     font-weight: normal;
-  }
+}
 
-  /*---------------------small-container-------------------*/
+.offer {
+    margin-top: 80px;
+    padding: 30px 0;
+}
 
-  .testimonial {
+.col-2 .offer-img {
+    padding: 50px;   
+}
+
+small {
+    color: #555;
+}
+
+/*------------------testimonial------------*/
+
+.testimonial {
     padding-top: 100px;
 }
 
@@ -144,10 +180,6 @@
     transform: translateY(-10px);
 }
 
-.fa.fa-quote-left {
-    font-size: 34px;
-    color: #ff523b;
-}
 
 .col-3 p {
     font-size: 12px;
@@ -155,25 +187,8 @@
     color: #777;
 }
 
-.offer {
-    margin-top: 80px;
-    padding: 30px 0;
-}
-
-.col-2 .offer-img {
-    padding: 50px;    
-}
-
-small {
+.testimonial .col-3 h3 {
+    font-size: 600;
     color: #555;
-}
-
-.col-boy {
-    flex-basis: 50%;
-    min-width: 300px;
-}
-
-.col-boy img {
-    max-width: 100%;
-    padding: 50px 0;
+    font-size: 16px;
 }
