--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ p {
     padding: 50px 0;
 }
 
+
 .col-2 h1 {
     font-size: 50px;
     line-height: 60px;
@@ -149,7 +150,7 @@ h4 {
 }
 
 .col-2 .offer-img {
-    padding: 50px;   
+    padding: 50px;
 }
 
 small {
@@ -191,4 +192,13 @@ small {
     font-size: 600;
     color: #555;
     font-size: 16px;
+}
+
+/*-------------footer------------------------------*/
+
+.footer {
+    background: #f0f0f0;
+    color: black;
+    font-size: 14px;
+    padding: 60px 0 20px;
 }
