--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,11 @@ section {
   background: #f2f1f0;
 }
 
+#footer-address {
+  color: black;
+  font-size: 16px;
+}
+
 .footer .box-container {
   display: -ms-grid;
   display: grid;
