--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,19 @@ section {
 
 /*---------offer-----------*/
 
+
+.heading::after {
+  content: '';
+  background: #ff523b;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
 .arrival_section {
   background-color: #d4ced0;
 }
