small-container css added

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,26 @@ p {
   margin-bottom: 1rem;
 }
 
+
+/*---------small-container------------*/
+
+.row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 70px;
+}
+
+
+.small-container {
+  max-width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+  
+
 /*---------footer-----------*/
 
 .footer {
