--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ section {
   height: 150px;
   background: #ff523b;
 }
-.text {
+.textRedBox {
   display: block;
   line-height: 150px; 
   text-align: center;
