--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,15 @@ h2 {
   align-items: center;
 }
 
+h1::after {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 5px;
+  background: #f7444e;
+  margin: 10px auto 10px;
+}
+
 
 
 /*---------footer-----------*/
