--- a/css/main.css
+++ b/css/main.css
@@ -138,3 +138,11 @@ p {
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+
+
+/*---------footer-----------*/
+
+.footer {
+    background: #f2f1f0;
+  }
