--- a/css/main.css
+++ b/css/main.css
@@ -145,4 +145,17 @@ p {
 
 .footer {
     background: #f2f1f0;
-  }
+}
+
+#footer-address {
+    color: black;
+    font-size: 16px;
+}
+  
+.footer .box-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(25rem, 1fr)) [auto-fit];
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 2rem;
+}
