--- a/css/main.css
+++ b/css/main.css
@@ -188,3 +188,18 @@ p {
     color: #9fa8a5;
     text-decoration: underline;
 }
+
+.footer .box-container .box p {
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #777;
+    padding: 1rem 0;
+}
+  
+.footer .box-container .box .email {
+    width: 100%;
+    padding: 1.2rem 1.4rem;
+    font-size: 1.6rem;
+    border: 0.1rem solid #787171;
+    margin-bottom: 1rem;
+}
