--- a/css/main.css
+++ b/css/main.css
@@ -203,3 +203,17 @@ p {
     border: 0.1rem solid #787171;
     margin-bottom: 1rem;
 }
+
+.footer .credit {
+    text-align: center;
+    margin-top: 3rem;
+    padding-top: 3rem;
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: #444;
+    border-top: 0.1rem solid black;
+}
+  
+.footer .credit span {
+    color: #b55c0e;
+}
