--- a/css/style.css
+++ b/css/style.css
@@ -401,6 +401,35 @@ h1::after {
 }
 
 
+/* Testimonials Section  */
+
+#testimonials {
+  text-align: center;
+  background-color: #ffadad;
+  color: rgb(0, 0, 0);
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
 
 
 /*---------footer-----------*/
