--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap");
 
 * {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -10,8 +9,8 @@
   outline: none;
   border: none;
   text-decoration: none;
-  -webkit-transition: all .2s linear;
-  transition: all .2s linear;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 img {
@@ -33,7 +32,6 @@ html::-webkit-scrollbar {
 html::-webkit-scrollbar-track {
   background: transparent;
 }
-
 
 section {
   padding: 5rem 10%;
@@ -73,10 +71,7 @@ section {
   text-transform: capitalize;
   color: #444;
   padding: 50px;
-
 }
-
-
 
 .containerRedBox {
   height: 150px;
@@ -84,12 +79,11 @@ section {
 }
 .textRedBox {
   display: block;
-  line-height: 150px; 
+  line-height: 150px;
   text-align: center;
   color: #f2f1f0;
   font-size: 50px;
 }
-
 
 .btn {
   display: inline-block;
@@ -102,14 +96,13 @@ section {
 
 .btn:hover {
   background: none;
-  border: solid  #ff523b;
+  border: solid #ff523b;
 }
 
-.btn-view{
+.btn-view {
   text-align: center;
   border-radius: 50%;
 }
-
 
 .header {
   position: -webkit-sticky;
@@ -138,7 +131,6 @@ section {
   font-weight: bolder;
 }
 
-
 .header .navbar {
   position: relative;
 }
@@ -155,7 +147,7 @@ section {
 
 .header .navbar #close-navbar:hover {
   -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .header .navbar a {
@@ -219,11 +211,9 @@ section {
   padding: 1rem 0;
 }
 
-
-#content-color{
+#content-color {
   color: #ff523b;
 }
-
 
 /*----------subjects section-----------*/
 
@@ -257,7 +247,7 @@ section {
 
 .subjects .box-container .box img {
   height: 8rem;
-  margin-bottom: .7rem;
+  margin-bottom: 0.7rem;
   color: white;
 }
 
@@ -265,7 +255,7 @@ section {
   font-size: 1.7rem;
   text-transform: capitalize;
   color: white;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 .subjects .box-container .box p {
@@ -274,35 +264,32 @@ section {
   color: rgb(255, 255, 255);
 }
 
-
 .png-bg {
   width: 55px;
   height: auto;
   fill: #ffffff;
 }
 
-
 /*---------offer-----------*/
 
-
-.arrival_bg_box{
+.arrival_bg_box {
   width: 100%;
   float: left;
   height: 150px;
 }
 
-.arrival_bg{
+.arrival_bg {
   width: 795px;
   height: 412px;
 }
 
-.ml-auto{
+.ml-auto {
   float: left;
   width: 300px;
 }
 
 .heading::after {
-  content: '';
+  content: "";
   background: #ff523b;
   width: 80px;
   height: 5px;
@@ -312,16 +299,14 @@ section {
   transform: translateX(-50%);
 }
 
-
 .arrival_section {
   background-color: #d4ced0;
 }
 
-.arrival_section  {
-  padding:78px 259px;
+.arrival_section {
+  padding: 78px 259px;
   position: relative;
 }
-
 
 p {
   margin-top: 0;
@@ -335,7 +320,6 @@ h2 {
   font-size: 50px;
 }
 
-
 /*---------small-container------------*/
 
 .row {
@@ -345,7 +329,6 @@ h2 {
   justify-content: space-around;
   margin-top: 70px;
 }
-
 
 .small-container {
   max-width: 1080px;
@@ -363,26 +346,25 @@ h2 {
 }
 
 .Subscribe-btn {
-  background-color:#ff523b;
-  border-radius:28px;
-  border:1px solid #ff523b;
-  display:inline-block;
-  color:#ffffff;
-  font-size:17px;
-  padding:10px 96px;
-  text-decoration:none;
+  background-color: #ff523b;
+  border-radius: 28px;
+  border: 1px solid #ff523b;
+  display: inline-block;
+  color: #ffffff;
+  font-size: 17px;
+  padding: 10px 96px;
+  text-decoration: none;
 }
-
 
 /*--------Customer's Testimonia---------*/
 
-.carousel-item{
+.carousel-item {
   align-items: center;
   padding-left: 45%;
   padding-bottom: 60px;
 }
 
-.d-block{
+.d-block {
   border-radius: 50%;
   align-items: center;
 }
@@ -396,10 +378,9 @@ h1::after {
   margin: 10px auto 10px;
 }
 
-.d-md-block{
+.d-md-block {
   color: #0b162c;
 }
-
 
 /* Testimonials Section  */
 
@@ -429,8 +410,6 @@ h1::after {
   width: 15%;
   margin: 20px 20px 50px;
 }
-
-
 
 /*---------footer-----------*/
 
@@ -470,7 +449,7 @@ h1::after {
   font-size: 1.7rem;
   line-height: 2;
   color: #777;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   display: block;
 }
 
@@ -508,6 +487,4 @@ h1::after {
   color: #b55c0e;
 }
 
-
 /*----------------------------------------*/
-
