--- a/css/main.css
+++ b/css/main.css
@@ -1,170 +1,159 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap");
 
-
-
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 #title {
-    background-color: #e3e3e3;
-    color: rgb(221, 32, 32);
+  background-color: #e3e3e3;
+  color: rgb(221, 32, 32);
 }
 
 .header-img {
-    height: 100vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background-image: url(images/slider-bg.jpg);
-    background-size: cover;
-    background-position: center;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-image: url(images/slider-bg.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 /* .title-text { */
 
-
-
 .container-fluid {
-    padding: 3% 15%;
+  padding: 3% 15%;
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3.5rem;
-    line-height: 1.5;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 
 h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3rem;
-    line-height: 1.5;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
 }
 
 p {
-    color: #281c1c;
+  color: #281c1c;
 }
-
 
 /* Navigation Bar */
 
 .navbar {
-    padding: 0 0 4.5rem;
+  padding: 0 0 4.5rem;
 }
 
 .navbar-brand {
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-item {
-    padding: 0 10px;
+  padding: 0 10px;
 }
 
 .nav-link {
-    font-size: 1.2rem;
-    font-family: 'Montserrat', sans-serif;
+  font-size: 1.2rem;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Download Button  */
 .shop-btn {
-    margin: 1% 3% 3% 0;
+  margin: 1% 3% 3% 0;
 }
-
 
 /* Title Image  */
 
 .title-image {
-    width: 60%;
+  width: 60%;
 }
 
 /* Features Section  */
 
 #features {
-    padding: 5% 15%;
+  padding: 5% 15%;
 }
 
 .feature-box {
-    text-align: center;
-    padding: 5%;
+  text-align: center;
+  padding: 5%;
 }
 
 .icon {
-    color: #000000;
-    margin-bottom: 1rem;
+  color: #000000;
+  margin-bottom: 1rem;
 }
 
 .icon:hover {
-    color: #494142;
+  color: #494142;
 }
-
-
 
 /* Testimonials Section  */
 
 #testimonials {
-    text-align: center;
-    background-color: #ffadad;
-    color: rgb(0, 0, 0);
+  text-align: center;
+  background-color: #ffadad;
+  color: rgb(0, 0, 0);
 }
 
 .carousel-item {
-    padding: 7% 15%;
+  padding: 7% 15%;
 }
 
 .testimonial-image {
-    width: 10%;
-    border-radius: 100%;
-    margin: 20px;
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
 
 #press {
-    background-color: #ef8172;
-    text-align: center;
-    padding-bottom: 3%;
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
 }
 
 .press-logo {
-    width: 15%;
-    margin: 20px 20px 50px;
+  width: 15%;
+  margin: 20px 20px 50px;
 }
-
-
 
 /*---------footer-----------*/
 
 .footer {
-    background: #f2f1f0;
+  background: #f2f1f0;
 }
 
 #button-addon1 {
-    color: #ffc371;
+  color: #ffc371;
 }
-  
+
 i {
-    color: #ffc371;
+  color: #ffc371;
 }
-  
+
 .form-control::placeholder {
-    font-size: 0.95rem;
-    color: #aaa;
-    font-style: italic;
+  font-size: 0.95rem;
+  color: #aaa;
+  font-style: italic;
 }
-  
+
 .form-control.shadow-0:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
